Remove historical analysis and improve capture ratio interpretations
- Delete historical/ directory and analyze_historical.py
- Update .gitignore to exclude both current/ and historical/ output directories
- Fix capture ratio interpretations to handle inverse correlation (negative values)
- Remove historical directory reference from visualize.py documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Output directory (analysis results - can be regenerated)
+# Output directories (analysis results - can be regenerated)
 html/
+current/
+historical/
 output/
 output_*/
 
